# PETITE

./: #Find_Maxes.py#  #setup.py#  .gitignore  AllProcesses.py  Example_GeVElectronShower.py  Find_Maxes.py  Find_Maxes_Dark.py  Find_Maxes_vary_neval.py  Gen_DarkSamples.py  Gen_Samples.py  MCCode.py  PETITEShower.ipynb  README.md  RadRet_Tests.ipynb  ShowerCode.py  TODO  Untitled.ipynb  log.txt  moliere.py  pyproject.toml  reproduce_paddy.ipynb  requirements.txt  setup.cfg  setup.py
NBP/: AnnihilationPickles.npy  Annihilation_AdaptiveMaps.npy  Bhabha_AdaptiveMaps.npy  Bremsstrahlung_AdaptiveMaps.npy  ComptonPickles.npy  Compton_AdaptiveMaps.npy  DarkBremPickles_10MeV_GraphiteTarget.npy  DarkBremPickles_10MeV_HeavyTarget.npy  ElectronPositron_BremPickles.npy  Photon_PairProdPickles.npy
PETITE/: #ryan_shower.py#  #shower.py#  AllProcesses.py  ComptonFixes.ipynb  Moliere.py  ShowerCode.py  dark_shower.py  kinematics.py  moliere.py  particle.py  physical_constants.py  ryan_dark_shower.py  ryan_shower.py  shower.py
PETITE.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
RyanDicts/: Feb13_xSec_Dicts.pkl  Feb7_xSec_Dicts.pkl  Mar24_xSec_Dicts.pkl  Mar24_xSec_Dicts_neval.pkl  dark_xSec_Dicts.pkl  print_Dicts.py  samp_Dicts.pkl  test.py  xSec_Dicts.pkl  xSec_Dicts_neval.pkl
coarsegrid_test/: dark_xsec.pkl  sm_xsec.pkl
data/: dark_drate.pkl  dark_weights.pkl  dark_xsec.pkl  sm_xsec.pkl
data_400GeV/: RRatio_New.csv  dark_drate.pkl  dark_weights.pkl  dark_xsec.pkl  sm_xsec.pkl
examples/: Example_DarkShower_10MeV.py  Example_GeVElectronShower.py  PETITEShower.ipynb  (+19 more)
(+1260 files in other folders)
