[metadata]
name = PETITE
authors = [
        {name="Nikita Blinov", email="nblinov@yorku.ca"}
        {name="Patrick J. Fox", email="pjfox@fnal.gov"}
        {name="Kevin J. Kelly", email="kjkelly@tamu.edu"}
        {name="Pedro A.N. Machado", email="pmachado@fnal.gov"}
        {name="Ryan Plestid", email="rplestid@caltech.edu"}
        {name="Matheus Hostert", email="matheus-hostert@uiowa.edu"}
	]
# author_email = ""
version = attr: PETITE.__version__
license = "MIT"
description = "Package for Electromagnetic Transitions in Thick-target Environments. It allows for simulations of standard model electromagnetic showers and production of new-physics particles in beam-dump environments."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kjkellyphys/PETITE
classifiers =
    Programming Language :: Cython
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
[options]
zip_safe = False
package_dir = 
	=src
packages = find:
python_requires = >=3.8
install_requires =
    tqdm
    vegas>=5.4.2
    numpy
setup_requires =
	cython
	numpy
[options.packages.find]
where = src
[options.package_data]
* = 
	include/*.dat
	include/*.txt
	include/*.py
	include/*/*.dat
	include/*/*.txt
	include/*/*.py
	include/assets/*
    *.pyx
PETITE = py.typed
[options.extras_require]
interactive = 
	nbstripout
    matplotlib
    jupyter